--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cristian Samboni's CV</title>
-    <meta name="description" content="Cristian es un desarrollador Web con más de 3 años de
-    experiencia trabajando en el Frontend.">
+    <meta name="description" content="Cristian Samboni, es un desarrollador Web con más de 3 años de
+    experiencia trabajando en el lado del Frontend.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link name="stylesheet" href="css/fontawesome-all.min.css">
+    <link name="stylesheet" href="css/main.css">
+    <link name="stylesheet" href="css/lightbox.css">
+    <link name="stylesheet" href="css/normalize.css">
+    <link rel="apple-touch-icon" href="images/logo.png">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald" rel="stylesheet">
 </head>
-<body style="font-family:Helvetica, Arial, sans-serif;margin:0;">
+<body style="font-family:'Oswald', sans-serif;margin:0;">
     <header style="background-color: #0872c4;color:white;text-align:center;padding:16px;">
         <h1 style="display: inline-block;width:400px;font-weight:700;">Cristian Samboni's CV</h1>
-        <p style="display: inline-block;width:400px;font-weight:200;">Frontend Web Developer</p>
+        <p style="display: inline-block;width:400px;font-weight:200;">Frontend Web Developer <i class="em em-gift"></i></p>
     </header>
         <div style="background-color: #d17840;color:back;text-align:center;padding:10px;">
            Over 3 years of experience building web applications as a Frontend Developer. 
@@ -58,27 +64,27 @@
                                <dd style="margin:0;">2017. Winner of Professional JavaScript course & design UX! </dd>
                             </dl>
                         </div>
-                        <div style="margin-top:70px;">
+                        <div class="redes-sociales">
                                 <h3 style="font-size:36px;font-weight:700;">Social Accounts</h3>
-                                <div>
+                                <div class="redes-sociales">
                                     <h3 style="font-size:36px;font-weight:700;"></h3>
                                     <ul style="margin-top:12px;padding:0px;">
                                     <li style="margin-top:16px;">
-                                        <a href="https://github.com/CSamboni" target="_blank">Github</a>
+                                        <a href="https://github.com/CSamboni" target="_blank"><i class="fab fa-github"></i>Github</a>
                                     </li>
                                     <li style="margin-top:16px;">
-                                    <a href="https://twitter.com/Cris_SamJS" target="_blank">Twitter</a>
+                                    <a href="https://twitter.com/Cris_SamJS" target="_blank"><i class="fab fa-twitter"></i>Twitter</a>
                                     </li>
                                     <li style="margin-top:16px;">
-                                    <a href="https://www.facebook.com/CrisstianSambonii" target="_blank">Facebook</a>
+                                    <a href="https://www.facebook.com/CrisstianSambonii" target="_blank"><i class="fab fa-facebook-f"></i>Facebook</a>
                                     </li>
                                     <li style="margin-top:16px;">
-                                    <a href="https://medium.com/@CristianSAM" target="_blank">Blog</a>
+                                    <a href="https://medium.com/@CristianSAM" target="_blank"><i class="fab fa-book"></i>Blog</a>
                                     </li>
                                     </ul>
                                 </div> 
-                                <div style="">
-                                        <h2 style="text-align: center;">Últimos <strong>Tweets</strong></h2>
+                                <div>
+                                        <h2 style="text-align: center;"> Mis últimos <strong>Tweets</strong></h2>
                                         <a class="twitter-timeline" data-height="400" data-theme="dark" href="https://twitter.com/Cris_SamJS?ref_src=twsrc%5Etfw">Tweets by Cris_SamJS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                                     </div>
              </div>
