--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
             </div>
             <div style="display:inline-block;width:30%;">
-              <img src="/images/profile.jpg" width="400">
+              <img src="https://avatars1.githubusercontent.com/u/24655632?s=460&v=4" width="400">
             </div>
         </div>
             <div style="margin-top:70px;">
