--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cristian Samboni's CV</title>
-    <meta name="description" content="Cristian Samboni, es un desarrollador Web con más de 3 años de
+    <meta name="description" content="Cristian Samboni es un desarrollador Web con más de 3 años de
     experiencia trabajando en el lado del Frontend.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link name="stylesheet" href="css/fontawesome-all.min.css">
