--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     </ul>
                                 </div> 
                                 <div>
-                                        <h2 style="text-align: center;"> Mis últimos <strong>Tweets</strong></h2>
+                                        <h2 style="text-align: center;"> My lastest<strong>Tweets</strong></h2>
                                         <a class="twitter-timeline" data-height="400" data-theme="dark" href="https://twitter.com/Cris_SamJS?ref_src=twsrc%5Etfw">Tweets by Cris_SamJS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                                     </div>
              </div>
