--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                                <dt style="font-size:20px;text-transform:uppercase;margin-bottom:12px;margin-top:36px;">JS Course  & Design</dt>
                                <dd style="margin:0;">2017. Winner of Professional JavaScript course & design UX! </dd>
                             </dl>
+                            <dl>
+                               <dt style="font-size:20px;text-transform:uppercase;margin-bottom:12px;margin-top:36px;">Professional Web Development Course</dt>
+                               <dd style="margin:0;">2018. Certified by Codigofacilito. Check it: <a href="https://codigofacilito.com/user_quizzes/8843.pdf">Certificate</a></dd>
+                            </dl>
                         </div>
                         <div class="redes-sociales">
                                 <h3 style="font-size:36px;font-weight:700;">Social Accounts</h3>
@@ -84,7 +88,7 @@
                                     </ul>
                                 </div> 
                                 <div>
-                                        <h2 style="text-align: center;"> Mis últimos <strong>Tweets</strong></h2>
+                                        <h2 style="text-align: center;"> My Latest<strong>Tweets</strong></h2>
                                         <a class="twitter-timeline" data-height="400" data-theme="dark" href="https://twitter.com/Cris_SamJS?ref_src=twsrc%5Etfw">Tweets by Cris_SamJS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                                     </div>
              </div>
