Adding a thumbnail img

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:image" content="https://avatars1.githubusercontent.com/u/24655632?s=460&v=4"/>
     <title>Cristian Samboni's CV</title>
     <meta name="description" content="Cristian Samboni es un desarrollador Web con más de 3 años de
     experiencia trabajando en el lado del Frontend.">
