--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         </dl>
                     </div>
             </div>
-            <div style="display:inline-block;width:30%;border-radius:8px;">
-              <img src="https://avatars1.githubusercontent.com/u/24655632?s=460&v=4" width="400">
+            <div style="display:inline-block;width:30%>
+              <img src="https://avatars1.githubusercontent.com/u/24655632?s=460&v=4" width="400" style="border-radius:8px">
             </div>
         </div>
             <div style="margin-top:70px;">
