--- a/index.html
+++ b/index.html
@@ -88,13 +88,14 @@
                                     <a href="https://medium.com/@CristianSAM" target="_blank"><i class="fab fa-book"></i>Blog</a>
                                     </li>
                                     </ul>
-                                </div> 
-                                <div>
+                                   </div> 
+                                     <div>
                                         <h2 style="text-align: center;"> My Latest<strong> Tweets</strong></h2>
                                         <a class="twitter-timeline" data-height="400" data-theme="dark" href="https://twitter.com/Cris_SamJS?ref_src=twsrc%5Etfw">Tweets by Cris_SamJS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                                     </div>
-             </div>
-         </section>
-</body>
-<script></script>
+                              </div>
+                     </section>
+                </body>
+          <script>  
+     </script>
 </html>
