--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </dl>
                     </div>
             </div>
-            <div style="display:inline-block;width:30%>
+            <div style="display:inline-block;width:30%;border-radius:8px">
               <img src="https://avatars1.githubusercontent.com/u/24655632?s=460&v=4" width="400">
             </div>
         </div>
