Modificado el latest tweet account.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                         <a href="https://github.com/CSamboni" target="_blank"><i class="fab fa-github"></i>Github</a>
                                     </li>
                                     <li style="margin-top:16px;">
-                                    <a href="https://twitter.com/Cris_SamJS" target="_blank"><i class="fab fa-twitter"></i>Twitter</a>
+                                    <a href="https://twitter.com/chris_uxing" target="_blank"><i class="fab fa-twitter"></i>Twitter</a>
                                     </li>
                                     <li style="margin-top:16px;">
                                     <a href="https://www.facebook.com/CrisstianSambonii" target="_blank"><i class="fab fa-facebook-f"></i>Facebook</a>
@@ -91,7 +91,7 @@
                                    </div> 
                                      <div>
                                         <h2 style="text-align: center;"> My Latest<strong> Tweets</strong></h2>
-                                        <a class="twitter-timeline" data-height="400" data-theme="dark" href="https://twitter.com/Cris_SamJS?ref_src=twsrc%5Etfw">Tweets by Cris_SamJS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                        <a class="twitter-timeline" data-height="400" data-theme="dark" href="https://twitter.com/chris_uxing?ref_src=twsrc%5Etfw">Tweets by Cris_SamJS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                                     </div>
                               </div>
                      </section>
